// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> with border to right matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c1::before {
  left: unset;
  right: -1px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 1px solid #eee;
  border-right: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with one custom item matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.5rem;
  padding: 1.44rem 1.31rem 1.38rem 1.88rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
  -webkit-transition: padding-right 0.2s;
  transition: padding-right 0.2s;
}

.c2::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover::before,
.c2:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 svg,
.c2 img {
  max-height: 1.5rem;
  width: auto;
}

.c2:focus,
.c2:hover {
  padding-right: 1rem;
  color: #222;
}

.c2::before {
  display: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 1px solid #eee;
  border-right: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c2"
        href="#"
      >
        <span>
          <a
            href="#custom-component"
          >
            Custom component
          </a>
        </span>
        <svg
          className="k-ArrowIcon k-ArrowIcon--right"
          data-radium={true}
          viewBox="0 0 6 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with one selected item matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #19b4fa;
}

.c2::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover::before,
.c2:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 1px solid #eee;
  border-right: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c2"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with three items matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.13rem 1.88rem 1.06rem;
  background-color: #fff;
  border-bottom: 1px solid #eee;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.88rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #b8b8b8;
}

.c2::before {
  content: '';
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 0.06rem;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover::before,
.c2:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  color: #222;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 1px solid #eee;
  border-right: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c2"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      className="customLiClass"
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;
